--- a/styles/_colors.scss
+++ b/styles/_colors.scss
@@ -1,1 +1,7 @@
-$random : rgba(30,68,112,1);
+$random: rgba(30, 68, 112, 1);
+$navbar: #0a0927;
+$nav-border: rgba(44, 43, 43, 0.705);
+$gradientColor1: #143e7d;
+$gradientColor2: #c3122e;
+$register: linear-gradient(to right, #901a18, #ca132c);
+$registerBody: #181733;
