--- a/styles/globals.css
+++ b/styles/globals.css
@@ -4,8 +4,8 @@ body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
     Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
-  
-
+  background-color: rgb(255, 255, 255);
+  height: 100%;
 }
 
 a {
@@ -15,4 +15,8 @@ a {
 
 * {
   box-sizing: border-box;
+}
+div {
+  margin: 0;
+  padding: 0;
 }
