--- a/styles/globals.css
+++ b/styles/globals.css
@@ -5,7 +5,7 @@ body {
   font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
     Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
   background-color: rgb(255, 255, 255);
-  height: 100%;
+  
 }
 
 a {
@@ -16,7 +16,7 @@ a {
 * {
   box-sizing: border-box;
 }
-div {
+/* div {
   margin: 0;
   padding: 0;
-}
+} */
