--- a/styles/News.module.scss
+++ b/styles/News.module.scss
@@ -3,3 +3,10 @@
   background: linear-gradient(to right, $gradientColor1, $gradientColor2)
     border-box;
 }
+.title {
+  font-size: 50px;
+  background: linear-gradient(to right, $gradientColor2, $gradientColor1);
+  font-weight: bold;
+  -webkit-text-fill-color: transparent;
+  -webkit-background-clip: text;
+}
