--- a/styles/globals.css
+++ b/styles/globals.css
@@ -12,6 +12,10 @@ a {
   color: inherit;
   text-decoration: none;
 }
+iframe{
+  width:'600px';
+  height:'400px'
+}
 
 * {
   box-sizing: border-box;
